# cowboy_vs_ninja_part_a

./: CMakeLists.txt  Test.cpp
sources/: Character.cpp  Character.hpp  Cowboy.cpp  Cowboy.hpp  Ninja.cpp  Ninja.hpp  OldNinja.cpp  OldNinja.hpp  Point.cpp  Point.hpp  SmartTeam.cpp  SmartTeam.hpp  Team.cpp  Team.hpp  Team2.hpp  TrainedNinja.cpp  TrainedNinja.hpp  YoungNinja.cpp  YoungNinja.hpp
